# c_code_tools

./: README.md  base64  base64.c
c_kafka_producer/: compile.sh  my_producer.c  test.json
cjson/: CMakeLists.txt  cJSON.c  cJSON.h  cjson_demo.c  test.json
cold_knowlege/: README.md  array_ptr.c  assert.c
common_lock/: CMakeLists.txt  README.md  atomic.md  lock_atomic.c  metux_lock.c  spin_lock.c
common_lock/docs/: mutex.md
embedding_python_in_c/: README.md  a.out  c_get_python.c  compile.sh  pytest.py
embedding_python_in_c/email/: YV-S2000_mail_20221012150931_192.168.105.42_21612_11257.eml
embedding_python_in_c/result/: report.html  rpm.sh  table.7z  table.doc  table.docx
file_operation/: CMakeLists.txt  read_write_file.c
get_file_last_modify_time/: main.c
get_system_iplist/: a.out  compile.sh  get_sys_iplist.c
glibc_hash/: compile.sh  example  ghash_key_int.c  ghash_main.c  key_int
iconv/: README.md  a.out  iconv_main.c
js_build/: README.md  compile.sh  main.c  rust-bindings.h
js_build/rust/: Cargo.toml  readme
linux_ipc/: README.md
linux_lock/: README.md  lock_atomic.c  lock_metux.c  rcu_lock.c  rw_lock.c
linux_lock/docs/: mutex.md  spinlock.md
linux_system_function/: README.md  popen.c  system.c
normal_functions/: common_function.c
print_bar/: a.out  main.c
setjmp_longjmp/: README.md  a.out  set_long_jmp.c
share_memory/: compile.sh  memory.h  read_memory.c  write_memory.c
socket/: tcp_recv.c  tcp_send.c
system_popen/: README.md
thread/: CMakeLists.txt  thread.c
utf8_gbk/: utf8_conver_gbk.c  utf8_to_gbk.c
(+11 files in other folders)
